tried react tutorial

--- a/src/hello.jade
+++ b/src/hello.jade
@@ -5,13 +5,28 @@ html
         title: Hello React!
         script(src="src/react.js")
         script(src="src/react-dom.js")
+        script(src="src/jquery.js")
         script(src="src/marked.js")
         //script(src="node_modules/react/dist/react.js")
         //script(src="node_modules/react-dom/dist/react-dom.js")
     body
+        h1 Things you own end up own you
+
         //div(id="example")
-        div(id="content")
-        script(src="src/tutorial6.js")
+        table
+          tr
+            td: div(id="content")
+            td: div(id="content2")
+        script(src="src/tutorial16.js")
+        //script(src="src/tutorial15.js")
+        //script(src="src/tutorial14.js")
+        //script(src="src/tutorial13.js")
+        //script(src="src/tutorial12.js")
+        //script(src="src/tutorial10.js")
+        //script(src="src/tutorial9.js")
+        //script(src="src/tutorial8.js")
+        //script(src="src/tutorial7.js")
+        //script(src="src/tutorial6.js")
         //script(src="src/tutorial5.js")
         //div(id="connmentBox")
         //div(id="connmentBox")
